# bybit-dump-detector

./: .env  .env.dev.example  .env.dev2.example  .env.dev3.example  .env.example  .gitignore  COMMANDS.md  README.md  auto_shorts_20260508_035329.csv  auto_shorts_20260510_064957.csv  canceled_signals_20260508_035329.csv  canceled_signals_20260510_064957.csv  count_sum_pcs_tp_hit.py  pnl_includes_costs.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_notify.py
app/: __init__.py  main.py
app/analytics/: __init__.py  features.py  market_context.py  ml_scorer.py  orderbook.py
app/bot/: dispatcher.py  formatters.py  keyboards.py  middleware.py  user_store.py
app/bybit/: __init__.py  (+3 more)
archive_pre_clean_20260503/: all_opened_signals_20260503_163136.csv  all_opened_signals_20260503_164724.csv  auto_shorts_20260503_163136.csv  auto_shorts_20260503_164724.csv  canceled_signals_20260503_163136.csv  canceled_signals_20260503_164724.csv
docker/: Dockerfile  README_dev3.md  canceled_signals_dump.csv  docker-compose.dev.yml  docker-compose.dev2.yml  docker-compose.dev3.yml  docker-compose.yml
docs/: architecture.md  json_examples.md
ml/: README.md  train_first_model.py
ml_dumps/: ml_opened_only_profitable.csv  ml_opened_vs_canceled.csv
scripts/: README_ML.md  _feature_engineering.py  diagnose_features.py  diagnose_folds.py  export_clean_for_ml.py  export_ml_shorts.ps1  export_ml_shorts_csv.py  export_trades_csv.py  init_db.sql  run_ml.bat  run_ml.ps1  train_decision_model.py  train_decision_model_nodead.py  train_decision_model_v2.py  train_outcome_model.py  watchdog.py
(+76 files in other folders)
