[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bybit-dump-detector"
version = "0.1.0"
description = "Telegram bot for detecting overheated shitcoins on Bybit"
requires-python = ">=3.11"
dependencies = [
    # Telegram
    "aiogram==3.4.1",
    # Bybit
    "pybit==5.7.0",
    # Async HTTP
    "aiohttp==3.9.3",
    "httpx==0.27.0",
    # Database
    "sqlalchemy[asyncio]==2.0.29",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    # Redis
    "redis[hiredis]==5.0.3",
    # Data processing
    "numpy==1.26.4",
    "pandas==2.2.1",
    # Scheduling
    "apscheduler==3.10.4",
    # Config
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    # Logging
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    # Utils
    "tenacity==8.2.3",
    "cachetools==5.3.3",
    "orjson==3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "coverage==7.4.4",
    "black==24.3.0",
    "ruff==0.3.5",
    "mypy==1.9.0",
    "pre-commit==3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
